--- a/src/css/style.css
+++ b/src/css/style.css
@@ -124,6 +124,9 @@ table {
 @-ms-viewport {
   width: device-width; }
 
+body {
+  padding: 25px; }
+
 .m-donate {
   background: #fafafa;
   border: 1px solid #acacac;
@@ -135,7 +138,7 @@ table {
 .m-donate__content {
   font-size: 20px;
   line-height: 1.4;
-  padding: 50px 50px 25px; }
+  padding: 50px 50px 0; }
   .m-donate__content h1,
   .m-donate__content h2 {
     font-size: 24px;
@@ -161,7 +164,10 @@ table {
 .m-splitContent__col {
   flex-basis: 0;
   flex-grow: 1;
+  margin: 0 0 25px;
   max-width: 100%; }
+  .m-splitContent__col:not(:last-of-type) p {
+    padding-right: 15px; }
 
 .m-donate__progressBar {
   border: 1px solid #acacac;
@@ -188,13 +194,10 @@ table {
   padding: 35px 50px; }
 
 .m-donate__footerLink {
-  border-bottom: 1px solid #282828;
   color: #282828;
   display: inline-block;
-  text-decoration: none;
   transition: border-bottom 180ms ease-in-out, color 180ms ease-in-out; }
   .m-donate__footerLink:hover, .m-donate__footerLink:focus {
-    border-bottom: 1px solid #334c89;
     color: #334c89; }
 
 .m-form {
@@ -210,7 +213,13 @@ table {
   width: 100%; }
 
 .m-form__inputWrapper {
-  position: relative; }
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  width: 100%; }
+  @media (min-width: 600px) {
+    .m-form__inputWrapper {
+      flex-wrap: nowrap; } }
   .m-form__inputWrapper:before {
     content: '£';
     display: inline-block;
@@ -220,21 +229,39 @@ table {
     left: 15px; }
 
 .m-form__input {
-  display: flex;
+  border: 1px solid #acacac;
+  flex: 1 1 auto;
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   height: 80px;
-  margin: 0 20px 0 0;
-  padding: 0 15px 0 28px; }
+  margin: 0 0 15px 0;
+  padding: 0 15px 0 28px;
+  width: 100%; }
+  .m-form__input:disabled {
+    opacity: 0.5; }
+  @media (min-width: 600px) {
+    .m-form__input {
+      margin: 0 15px 15px 0; } }
 
 .m-form__submit {
+  appearance: none;
   background: #334c89;
   border: none;
   border-radius: 4px;
   color: #ffffff;
+  flex: 1 1 auto;
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
+  height: 80px;
   padding: 0 15px;
-  appearance: none; }
-  .m-form__submit:hover, .m-form__submit:focus {
+  width: 100%; }
+  @media (min-width: 600px) {
+    .m-form__submit {
+      flex: 1 1 190px; } }
+  .m-form__submit:not(:disabled):hover, .m-form__submit:not(:disabled):focus {
     cursor: pointer; }
+  .m-form__submit:disabled {
+    opacity: 0.5; }
+
+.m-form__message--hidden {
+  display: none; }
